src/index.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --color-brand: #d0464d;
  --color-brand-dark: #a13136;
}

@layer utility {
  .type-title {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 26px;
  }

  .type-large {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 20px;
  }

  .type-large-bold {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    font-size: 20px;
  }

  .type-body {
    font-family: "Outfit", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 16px;
  }

  .scrollbar-hide {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }

  .scrollbar-hide::-webkit-scrollbar {
    display: none;
  }
}

@layer base {
  body {
    @apply bg-neutral-50 dark:bg-neutral-900;
  }
}

@layer components {
  .bg-standard {
    @apply bg-neutral-50 dark:bg-neutral-900;
  }

  .text-standard {
    @apply text-neutral-700 dark:text-neutral-200;
  }

  .brand-button {
    @apply text-neutral-50 rounded-2xl bg-linear-to-t from-brand-dark to-brand hover:drop-shadow-xl/25 drop-shadow-brand-dark scale-100 transition-all duration-150 ease-in-out;
  }

  .brand-button:hover {
    @apply scale-105;
  }

  .brand-button:active {
    @apply scale-100 inset-shadow-sm inset-shadow-brand-dark;
  }

  .link-inset {
    @apply scale-100 transition-all duration-150 ease-in-out;
  }

  .link-inset:hover {
    @apply scale-105;
  }

  .link-inset:active {
    @apply scale-100 inset-shadow-sm inset-shadow-neutral-300 dark:inset-shadow-neutral-800;
  }

  .link-hover::before {
    content: "";
    @apply w-full h-full scale-100 absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 rounded-2xl bg-neutral-200 -z-10 opacity-0 transition-all duration-150 ease-in-out;
  }

  .dark .link-hover::before {
    @apply bg-neutral-700;
  }

  .link-hover {
    @apply relative cursor-pointer;
  }

  .link-hover:hover::before {
    @apply opacity-100 scale-130;
  }

  .link-hover:active::before {
    @apply scale-125 inset-shadow-sm inset-shadow-neutral-300 dark:inset-shadow-neutral-800;
  }

  .dark .link-hover:active::before {
    @apply inset-shadow-neutral-800;
  }

  .link-dotted {
    @apply underline underline-offset-[1.5px] decoration-dotted decoration-1 decoration-neutral-700 dark:decoration-neutral-200 cursor-pointer;
  }

  .link-dotted:hover {
    @apply decoration-solid;
  }

  .card {
    @apply rounded-2xl drop-shadow-sm/25 drop-shadow-neutral-500;
  }
}

